--- a/estilos/style.css
+++ b/estilos/style.css
@@ -59,7 +59,7 @@ section.img02{
     background-image: url(../imagens/fundo2.jpg);
     background-size:cover;
     background-attachment: fixed;
-    background-position: left center;
+    background-position: center center;
     box-shadow: inset 7px 7px 15px rgba(0, 0, 0, 0.548);
     text-shadow: 2px 2px 2px black;
 }
@@ -67,7 +67,7 @@ section.img03{
     background-image: url(../imagens/fundo3.jpg);
     background-size:cover;
     background-attachment: fixed;
-    background-position:center center;
+    background-position:center top;
     box-shadow: inset 7px 7px 15px rgba(0, 0, 0, 0.548);
     text-shadow: 2px 2px 2px black;
 }
